--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -28,5 +28,5 @@ jobs:
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-        repository: gunnerg/HouseholdServer
+        repository: gunnerg/household
         tag_with_ref: true
