--- a/HouseholdPlan.Server/HouseholdPlan.Server.csproj
+++ b/HouseholdPlan.Server/HouseholdPlan.Server.csproj
@@ -2,7 +2,13 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <UserSecretsId>99a59262-a07f-4d33-9ce6-b3b0512b83c0</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.9" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\HouseholdPlan.Core\HouseholdPlan.Core.csproj" />
