--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -23,9 +23,10 @@ jobs:
     - name: Test
       run: dotnet test --no-build --verbosity normal
     - name: Push to Docker Hub
-      uses: mr-smithers-excellent/docker-build-push@v5
+      uses: docker/build-push-action@v1
       with:
-        image: gunnerg/household
-        registry: docker.io
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
+        repository: my-docker-hub-namespace/my-docker-hub-repository
+        file: ./HouseholdPlan.Server/Dockerfile
+        tag_with_ref: true
