--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -27,6 +27,6 @@ jobs:
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-        repository: my-docker-hub-namespace/my-docker-hub-repository
+        repository: gunnerg/household
         file: ./HouseholdPlan.Server/Dockerfile
         tag_with_ref: true
