--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -23,11 +23,11 @@ jobs:
     - name: Test
       run: dotnet test --no-build --verbosity normal
     - name: Push to Docker Hub
-      uses: docker/build-push-action@v1
+      uses: docker/build-push-action@v2
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
         repository: gunnerg/household
-        context: .
-        file: ./HouseholdPlan.Server/Dockerfile
+        context: ./HouseholdPlan.Server/
+        file: ./Dockerfile
         tag_with_ref: true
