--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -28,6 +28,6 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
         repository: gunnerg/household
-        context: /home/runner/work/HouseholdPlan/HouseholdPlan/HouseholdPlan.Server/
-        file: /home/runner/work/HouseholdPlan/HouseholdPlan/HouseholdPlan.Server/Dockerfile
+        context: /home/runner/work/HouseholdPlan/HouseholdPlan/
+        file: ./HouseholdPlan.Server/Dockerfile
         tag_with_ref: true
