--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -32,3 +32,4 @@ jobs:
         file: ./HouseholdPlan.Server/Dockerfile
         push: true
         tag_with_ref: true
+        tags: gunnerg/household:latest
