--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -22,14 +22,20 @@ jobs:
       run: dotnet build --no-restore
     - name: Test
       run: dotnet test --no-build --verbosity normal
-    - name: Push to Docker Hub
-      uses: docker/build-push-action@v2
+    - name: Docker Login
+      uses: docker/login-action@v1
       with:
+        registry: gunnerg
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-        repository: gunnerg/household
+    -
+      name: Docker Build
+      uses: docker/build-push-action@v2
+      with:
         context: /home/runner/work/HouseholdPlan/HouseholdPlan/
         file: ./HouseholdPlan.Server/Dockerfile
-        push: true
-        tag_with_ref: true
         tags: gunnerg/household:latest
+        load: true
+    -
+      name: Docker Push
+      run: docker push gunnerg/household:latest
