--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -22,20 +22,17 @@ jobs:
       run: dotnet build --no-restore
     - name: Test
       run: dotnet test --no-build --verbosity normal
-    - name: Docker Login
+    - name: Login to DockerHub
       uses: docker/login-action@v1
       with:
-        registry: gunnerg
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-    -
-      name: Docker Build
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+    - name: Docker Build
       uses: docker/build-push-action@v2
       with:
         context: /home/runner/work/HouseholdPlan/HouseholdPlan/
         file: ./HouseholdPlan.Server/Dockerfile
         tags: gunnerg/household:latest
         load: true
-    -
-      name: Docker Push
+    - name: Docker Push
       run: docker push gunnerg/household:latest
