--- a/HouseholdPlan.Server/appsettings.json
+++ b/HouseholdPlan.Server/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=HouseholdUsers.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
