--- a/HouseholdPlan.Server/HouseholdPlan.Server.csproj
+++ b/HouseholdPlan.Server/HouseholdPlan.Server.csproj
@@ -22,4 +22,10 @@
     <ProjectReference Include="..\HouseholdPlan.Core\HouseholdPlan.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="HouseholdUsers.db">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
