--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
-      run: dotnet build --no-restore
+      run: dotnet build **/HouseholdPlan.Server.csproj --no-restore
     - name: Test
       run: dotnet test --no-build --verbosity normal
     - name: Login to DockerHub
