--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Build
       run: dotnet build **/HouseholdPlan.Server.csproj --no-restore
     - name: Test
-      run: dotnet test --no-build --verbosity normal
+      run: dotnet test **/*.Test.csproj  --no-build --verbosity normal
     - name: Login to DockerHub
       uses: docker/login-action@v1
       with:
