--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -35,4 +35,4 @@ jobs:
         tags: ${{ secrets.NAMESPACE }}/${{ secrets.REPO }}
         load: true
     - name: Docker Push
-      run: docker push ${{ secrets.NAMESPACE }}/${{ secrets.REPO }}:0.1
+      run: docker push ${{ secrets.NAMESPACE }}/${{ secrets.REPO }}
